# findtheti.me

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yml  docker-compose.yml  go.mod  go.sum
.github/workflows/: docker-publish.yml
.sqlx/: query-1db35e76adcb0ed4de84b8296efe9b2a8409e92eebee83150ee8f57fa20728f4.json  query-2aac7a200b3c65e8d406e4844c14418eeb22faa0bc9cb7e2877a1407a242afe0.json  query-4437b6962ab26de280e4aecc39db5817581f05528ced1856b2a974e7767b8af7.json  query-44fb63d566bb22d02ef6a0583fc1b7289f16549b24aeb49af2632f3c743a5076.json  query-761513e437e36f444040e6f375e867ebeaf9a921f0e95e8ade09f14899409c58.json  query-d13c89523084d914be6e6250b2738e835447bd3478ec50245eca833e476fd9bf.json
cmd/fttapi-svc/: main.go
e2e/: fttapi_test.go
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  utils.ts
internal/dbutils/: transaction.go  transaction_test.go
internal/http/: router.go
migrations/: 20240107220854_CreateEventTable.sql  20240107220912_CreateAvailabilityTable.sql  20240108081050_EventAddNameAndDescription.sql  20240108085633_FixEventSnowflakeId.sql  20240108212119_EventSetDatesOptional.sql  20240111181203_ChangeIpColumnSizeAgain.sql  20251113204216_CreateEvents.up.sql  20251113204217_CreateAvailabilities.down.sql  20251113204217_CreateAvailabilities.up.sql
migrations-old/: 20240108143507_ChangeUserIpToString.sql  20240109082813_EventAddDuration.sql  20240111111901_ChangeIpColumnSize.sql
src/: api.rs  config.rs  db.rs  endpoints.rs  main.rs
(+34 files in other folders)
